--- a/package.json
+++ b/package.json
@@ -3,26 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "0.0.29",
-    "jest-expo": "^0.4.0",
-    "react-test-renderer": "16.0.0-alpha.6"
+    "react-native-scripts": "1.11.1",
+    "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "ios": "react-native-scripts ios"
   },
   "dependencies": {
-    "expo": "^16.0.0",
-    "react": "16.0.0-alpha.6",
-    "react-native": "^0.43.4",
-    "react-native-elements": "^0.12.2",
-    "react-navigation": "^1.0.0-beta.9"
+    "expo": "^25.0.0",
+    "react": "16.2.0",
+    "react-native": "^0.52.0",
+    "react-native-elements": "^0.19.0",
+    "react-navigation": "^1.5.8"
   }
 }
